# mcp-pyboy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: 01_project_design.md  02_technical_architecture.md  03_mvp_implementation_roadmap.md
docs/mcp/: llms-full.txt
examples/: .gitkeep
notebooks/: .gitkeep
roms/: .gitkeep
saves/: .gitkeep
scripts/: .gitkeep  sync-dev-tools.sh
src/frontend/: __init__.py  app.py
src/frontend/static/: app.js  index.html  style.css
src/mcp_pyboy/: __init__.py  cli.py  server.py  session.py
src/mcp_pyboy/game_session/: __init__.py
src/mcp_pyboy/handlers/: __init__.py
src/mcp_pyboy/mcp_server/: __init__.py
src/mcp_pyboy/notebook/: __init__.py
src/mcp_pyboy/scripts/: format.py  typecheck.py
src/mcp_pyboy/utils/: __init__.py
src/mcp_server/: emulator.py  server.py
src/mcp_server/scripts/: __init__.py  lint.py  test.py  typecheck.py  utils.py
src/web_frontend/: app.js  index.html  style.css
src/web_server/: app.py
tests/: .gitkeep  __init__.py  conftest.py  test_example.py
tests/fixtures/: emulator_fixtures.py  mock_pyboy.py
tests/fixtures/test_roms/: README.md
tests/fixtures/test_roms/games/: README.md
tests/fixtures/test_roms/synthetic/: README.md
tests/integration/: test_emulator.py  test_mcp_tools.py
tests/mcp_server/: conftest.py
tests/mcp_server/fixtures/: __init__.py  emulator_fixtures.py  rom_generation.py
tests/mcp_server/fixtures/test_roms/hardware/: README.md
tests/mcp_server/integration/: __init__.py  test_emulator.py  test_mcp_tools.py
tests/unit/: __init__.py
